src/objects/Campaign_Product__c.object
<CustomObject>
    <description>Junction object to connect campaigns with PMD Products</description>
    <fields>
        <fullName>Actual_Lift__c</fullName>
        <label>Actual Lift %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_vs_Target__c</fullName>
        <formula>Actual_Lift__c -  Target_Lift__c</formula>
        <inlineHelpText>Actual minus Target, as an objective measure of success</inlineHelpText>
        <label>Actual vs Target %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Baseline_SO_wk__c</fullName>
        <inlineHelpText>Used as reference to Target lift</inlineHelpText>
        <label>Baseline SO/wk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundled_Product_Discount__c</fullName>
        <label>Bundled Product Discount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundled_Product_Price_or_Discount__c</fullName>
        <label>Bundled Product Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled_with__c</fullName>
        <inlineHelpText>Applies only if product sub-category = Bundling</inlineHelpText>
        <label>Bundled with</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Effectiveness_Detail__c</fullName>
        <inlineHelpText>Additional details from Sales/Marketing (post-promotion analytic outcome)</inlineHelpText>
        <label>Campaign Effectiveness (Detail)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Effectiveness__c</fullName>
        <label>Campaign Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>Met Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Meet Expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Products</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Communication_Method__c</fullName>
        <label>Communication Method</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Retail Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Incremental_Value__c</fullName>
        <inlineHelpText>Enter either Target Lift % or Incremental Value</inlineHelpText>
        <label>Incremental Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Before_Campaign__c</fullName>
        <inlineHelpText>Applies only if Promotion lever = price reduction</inlineHelpText>
        <label>Product Price Before Campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_During_Campaign__c</fullName>
        <inlineHelpText>Applies only if Promotion lever = price reduction</inlineHelpText>
        <label>Product Price During Campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Campaign_Details__c</fullName>
        <label>Product Campaign Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Business_Unit__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaign Products</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program1__c</fullName>
        <formula>Product__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_PMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you selected a product, leave this field (Project) empty.</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PMD_Project__c.Project_Status__c</field>
                <operation>equals</operation>
                <value>Active, On Hold, Shipping, End of Life</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMD_Project__c</referenceTo>
        <relationshipLabel>Campaign Products</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Lift__c</fullName>
        <label>Target Lift %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Campaign Product</label>
    <nameField>
        <displayFormat>CMP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bundle_Promo</fullName>
        <active>true</active>
        <description>When the promotion is a BOGO or Bundle then Bundled With is Required</description>
        <errorConditionFormula>AND( ISPICKVAL( Campaign__r.Category__c , &quot;Promotions&quot;),  
 OR(CONTAINS(TEXT( Campaign__r.Sub_Category__c), &quot;Bundle&quot;),CONTAINS(TEXT( Campaign__r.Sub_Category__c), &quot;BOGO&quot;)),
 ISBLANK(Bundled_with__c)
)</errorConditionFormula>
        <errorDisplayField>Bundled_with__c</errorDisplayField>
        <errorMessage>Bundled With field must identify the additional product(s) when the promotion is BOGO or Bundle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bundle_Promo_Price</fullName>
        <active>true</active>
        <description>When the promotion is a BOGO or Bundle then Bundled Product Price or Discount is Required</description>
        <errorConditionFormula>AND( ISPICKVAL( Campaign__r.Category__c , &quot;Promotions&quot;),  
 OR(CONTAINS(TEXT( Campaign__r.Sub_Category__c), &quot;Bundle&quot;),CONTAINS(TEXT( Campaign__r.Sub_Category__c), &quot;BOGO&quot;)),
 AND(ISBLANK(  Bundled_Product_Price_or_Discount__c ),ISBLANK( Bundled_Product_Discount__c ))
)</errorConditionFormula>
        <errorDisplayField>Bundled_Product_Price_or_Discount__c</errorDisplayField>
        <errorMessage>Bundled Product Price or Bundled Product Discount amount is required when the type of promotion is a BOGO or Bundle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Communication_Method_Required</fullName>
        <active>true</active>
        <description>Requires the method for communicating the promotion when category is Promotion</description>
        <errorConditionFormula>AND( OR(ISPICKVAL( Campaign__r.Category__c , &quot;Promotions&quot;),ISPICKVAL( Campaign__r.Category__c , &quot;Permanent Move&quot;)),  
ISBLANK( Communication_Method__c ) 
)</errorConditionFormula>
        <errorDisplayField>Communication_Method__c</errorDisplayField>
        <errorMessage>The Communication Method is required for promotion category of Permanent Move or Promotions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_Drop_Before_Pricing</fullName>
        <active>true</active>
        <description>When Lever is a Price Drop the Before and During Price is Required</description>
        <errorConditionFormula>AND( ISPICKVAL( Campaign__r.Sub_Category__c , &quot;Price Drop&quot;), ISNULL(Price_Before_Campaign__c))</errorConditionFormula>
        <errorDisplayField>Price_Before_Campaign__c</errorDisplayField>
        <errorMessage>Prices Before and During Campaign are required when the campaign Lever is a Price Drop.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_Drop_During_Pricing</fullName>
        <active>true</active>
        <description>When Lever is a Price Drop the Before and During Price is Required</description>
        <errorConditionFormula>AND( ISPICKVAL( Campaign__r.Sub_Category__c , &quot;Price Drop&quot;),
ISNULL(Price_During_Campaign__c))</errorConditionFormula>
        <errorDisplayField>Price_During_Campaign__c</errorDisplayField>
        <errorMessage>Prices Before and During Campaign are required when the campaign Lever is a Price Drop.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Or_Project_Is_Required</fullName>
        <active>true</active>
        <description>You must select a Project (PMD) or a Product</description>
        <errorConditionFormula>AND(ISBLANK( Product__c), ISBLANK( Project_PMD__c))</errorConditionFormula>
        <errorMessage>You must select a Project (PMD) or a Product</errorMessage>
    </validationRules>
</CustomObject>